--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -199,6 +199,11 @@
                 </a>
             </li>
             <li>
+                <a href="{{ url_for('admin.subcategorias') }}">
+                    <i class="fas fa-tags"></i> Subcategorias
+                </a>
+            </li>
+            <li>
                 <a href="{{ url_for('admin.configuracoes') }}">
                     <i class="fas fa-cog"></i> Configurações
                 </a>
