mudei os textos da home
Removed the word 'únicas' from the description paragraph.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
                             <h1 class="h1 text-success"><b> </b> Autenticidade e Inclusão </h1>
                             <h3 class="h2"> Identidade, Versatilidade e Representatividade </h3>
                             <p>
-                                Desenvolvemos moda e acessórios afro autorais que celebram suas raízes. Nossas estampas são únicas e cheias de alegria, com peças pensadas para vestir com conforto e versatilidade todos os corpos e todos os gêneros.
+                                Desenvolvemos moda e acessórios afro autorais que celebram suas raízes. Nossas estampas são cheias de alegria, com peças pensadas para vestir com conforto e versatilidade todos os corpos e todos os gêneros.
                             </p>
                         </div>
                     </div>
