--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row p-5">
                     <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/banner_img_01.jpg') }}" alt="">
+                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/logo01.jpeg') }}" alt="">
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left align-self-center">
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="row p-5">
                     <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/banner_img_02.jpg') }}" alt="">
+                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/teresa02.jpeg') }}" alt="">
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left">
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row p-5">
                     <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/banner_img_03.jpg') }}" alt="">
+                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/modelos01.jpeg') }}" alt="">
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left">
@@ -98,13 +98,13 @@
         </div>
         <div class="col-6 col-md-4 col-lg p-4 mt-3">
             <a href="{{ url_for('shop', categoria='Pulseiras') }}" class="text-decoration-none">
-                <img src="{{ url_for('static', filename='zay/assets/img/minha-pulseira.jpeg') }}" class="rounded-circle img-fluid border" style="width: 100%; max-width: 250px; height: 250px; object-fit: cover; display: block; margin: 0 auto;">
+                <img src="{{ url_for('static', filename='zay/assets/img/pulseira01.jpeg') }}" class="rounded-circle img-fluid border" style="width: 100%; max-width: 250px; height: 250px; object-fit: cover; display: block; margin: 0 auto;">
                 <h5 class="text-center mt-3 mb-3 text-primary text-decoration-underline">Pulseiras</h5>
             </a>
         </div>
         <div class="col-6 col-md-4 col-lg p-4 mt-3">
             <a href="{{ url_for('shop', categoria='Brincos') }}" class="text-decoration-none">
-                <img src="{{ url_for('static', filename='zay/assets/img/category_img_01.jpg') }}" class="rounded-circle img-fluid border" style="width: 100%; max-width: 250px; height: 250px; object-fit: cover; display: block; margin: 0 auto;">
+                <img src="{{ url_for('static', filename='zay/assets/img/brinco01.jpg') }}" class="rounded-circle img-fluid border" style="width: 100%; max-width: 250px; height: 250px; object-fit: cover; display: block; margin: 0 auto;">
                 <h5 class="text-center mt-3 mb-3 text-primary text-decoration-underline">Brincos</h5>
             </a>
         </div>
